<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">OBDReader</string>
    <string name="hello_world">Hello world!</string>
    <string name="command_list">Choose a command</string>
    <string name="service_started">OBD connection has started.</string>
    <string name="service_stopped">OBD connection has stopped.</string>
    <string name="notification_label">Tap to open OBD-Reader.</string>
    <string name="action_settings">Settings</string>
    <string name="title">engine diagnostic management system</string> 
    <string name="obd_alarm">alarm</string> 
    <string name="obd_check">Trouble Code Check</string> 
    <string name="obd_health">health setting</string> 
    <string name="obd_speed_test">speed test</string> 
    <string name="obd_health_warn">maintenance reminders</string>
    <string name="alarm_view_1_1">engine load</string>
    <string name="alarm_view_1_2">battery voltage</string>
    <string name="alarm_view_1_3">coolant temp</string> 
    <string name="alarm_view_1_4">cylinder angle</string> 
    <string name="alarm_view_2_1">throttle position</string>
    <string name="alarm_view_2_2">engine rpm</string>
    <string name="alarm_view_2_3">air metering</string>
    <string name="alarm_view_2_4">long-term fuel trim</string>
    <string name="alarm_view_3_1">intake air temp</string>
    <string name="alarm_view_3_2">ambient temp</string>
    <string name="alarm_view_3_3">manifold press</string>  
    <string name="alarm_value_negative_40">-40</string>
    <string name="alarm_value_negative_15">-15</string> 
    <string name="alarm_value_0">0</string> 
    <string name="alarm_value_9">9</string>
    <string name="alarm_value_15">15</string> 
    <string name="alarm_value_25">25</string> 
    <string name="alarm_value_40">40</string>
    <string name="alarm_value_60">60</string> 
    <string name="alarm_value_80">80</string> 
    <string name="alarm_value_100">100</string> 
    <string name="alarm_value_101">101</string>
    <string name="alarm_value_140">140</string>
    <string name="alarm_value_200">200</string>
    <string name="alarm_value_9999">9999</string>
    <string name="alarm_not_data">no data</string>
    <string name="check_100_point">100</string>
    <string name="check_error">error</string>
    <string name="check_ok">ok</string>
    <string name="check_need_check">to be checked</string>    
    <string name="check_lookup">lookup</string>
    <string name="check_start_check">starts check</string>
    <string name="check_item">Trouble code</string>
    <string name="describe">Describe</string>
    <string name="check_engine_system">engine system</string>
    <string name="check_egs">automatic transmission system</string>
    <string name="check_braking_system">brake system</string>
    <string name="check_srs">airbag system</string>
    <string name="check_not_found_system">system is busy or communication error, please try again later&#8230;</string>
    <string name="check_not_error">did not inquire into any fault</string>   
    <string name="check_point">point</string>    
    <string name="health_hint">hint</string>
    <string name="health_confirm">ok</string>
    <string name="health_cancel">cancel</string>
    <string name="health_mile_setting">mileage setting</string>
    <string name="health_time_setting">time setting</string>
    <string name="health_km">km</string>
    <string name="health_month">month</string>
    <string name="health_day">day</string>
    <string name="health_detail">detail</string>
    <string name="health_open_setting">maintenance information, please open the settings</string> 
    <string name="your_car_health_maintenance">your car will exercise maintenance after %1$d %2$s</string>
    <string name="setting_invalid">your settings is invalid</string>
    <string name="health_dont_support_mile">your car does not support the mileage reads</string> 
    <string name="test_start">start</string>
    <string name="test_stop">stop</string>
    <string name="test_0_second">00.00s</string>
    <string name="second">s</string>
    <string name="test_speed_setting">speed setting</string>
    <string name="test_speed_unit">km/h</string>
    <string name="test_distance_setting">distance setting</string>
    <string name="test_meter">meter</string>
    <string name="test_test">test</string>
    <string name="test_selct_one">please select one to test</string> 
    <string name="fault_code">trouble code</string> 
    <string name="reading_fault_code">reading fault code&#8230;</string>
    <string name="no_fault_code">no trouble code</string>
    <string name="clear">clear</string>
    <string name="solved">solved</string>
    <string name="unsolved">unsolved</string>
    <string name="select_vin">please select models</string>
    <string name="delete_fail">delete fail</string>
    <string name="delete_success">delete success</string>
    <string name="on">ON</string> 
    <string name="off">OFF</string> 
    <string name="ok">OK</string>
    <color name="green">#00ff00</color>
    <color name="red">#ff0000</color>
    <dimen name="alarm_progress_width">517dp</dimen>
    <dimen name="alarm_progress_height">37dp</dimen>
    <dimen name="alarm_progress_marginLeft">20dp</dimen>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="net_uncon">网络未连接，是否现在设置网络？</string>
    <string name="device_unconn">设备未连接</string>
    <string name="please_stop">请先停稳车</string>
    <string name="ready">已经准备好</string>
    <string name="chronograph">记时开始</string>
    <string name="over">停止</string>
    
     <!--  Strings for possible PreferenceActivity Back/Next buttons -->
    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>

    <!-- Optional button to Skip a PreferenceActivity [CHAR LIMIT=20] -->
    <string name="skip_button_label">Skip</string>
    
    <string name="speed_60">60KM/H</string>
    <string name="speed_80">80KM/H</string>
    <string name="speed_100">100KM/H</string>
    <string name="wait">&#8230;</string>
    <string name="best_score">最好成绩:</string>
    <string name="no_best_score">无</string>
    <string name="category">范畴</string>
    <string name="en_def">英文定义</string>
    <string name="cn_def">中文定义</string>
    <string name="knowledge">背景知识</string>
    <string name="obd_check">OBD检测</string>
    <string name="obd_pid">PID</string>
    
     <string name="choice_date">请选择保养间隔时间</string>
    <string name="set_date">设置保养间隔时间</string>
    
    <string name="current_interval_time">当前保养间隔时间</string>
    
    <string name="maintenance_interval_time">保养间隔时间</string>
    <string name="maintenance_tip_off">保养提醒未开启</string>
    <string name="maintenance_tip_on">保养提醒已经开启</string>
    <string name="maintenance_tip">是否开启保养提醒</string>
    <string name="maintenance_time">保养时间</string>
    <string name="last_maintenance_time">上一次保养时间</string>
    <string name="next_maintenance_time">下一次保养时间</string>
    <string name="no_maintenance_log">没有保养记录</string>
    <string name="maintenance_settings">基本设置</string>
    <string name="base_settings">基本设置</string>
    <string name="configuration_settings">基本设置</string>
    <string name="obd_pid">PID</string>
    <string name="connect_type_summary">选择设备连接方式</string>
    <string name="connect_type_title">设备连接方式</string>
    <string name="connect_device_summary">选择连接设备</string>
    <string name="connect_device_title">连接设备</string>
    <string name="current_connect_type">连接方式 :</string>
    <string name="choice_connect_type">请先选择设备连接方式</string>
    <string name="current_obd_device">OBD设备: </string>
    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    
    <string name="wifi_disabled">Disabled</string>
    <string name="wifi_not_in_range">Not in range</string>
    <string name="wifi_remembered">Remembered</string>
    <string name="wifi_secured_with_status"><xliff:g id="wifi_status">%2$s</xliff:g>, secured with <xliff:g id="wifi_security">%1$s</xliff:g></string>
    <string name="wifi_secured">Secured with <xliff:g id="wifi_security">%1$s</xliff:g></string>
    
    <string name="progress_scanning">Scanning</string>
    
    <!-- Used in the 1st-level settings screen to turn on WLAN -->
    <string name="wifi_quick_toggle_title">WLAN</string>
    <!-- Used in the 1st-level settings screen as the turn-on summary -->
    <string name="wifi_quick_toggle_summary">Turn on WLAN</string>
    <!-- Used in the 1st-level settings screen to go to the 2nd-level settings screen -->
    <string name="wifi_settings">WLAN settings</string>
    <!-- Title of the Wi-fi settings screen -->
    <string name="wifi_settings_category">WLAN settings</string>
    <!-- Summary text of the Wi-fi settings screen -->
    <string name="wifi_settings_summary">Set up &amp; manage wireless access points</string>
    <!-- Summary text when turning WLAN or bluetooth on -->
    <string name="wifi_starting">Turning on\u2026</string>
    <!-- Summary text when turning WLAN or bluetooth off -->
    <string name="wifi_stopping">Turning off\u2026</string>
    <!-- Summary text when WLAN or bluetooth has error -->
    <string name="wifi_error">Error</string>
    <!-- Toast message when WLAN or bluetooth is disallowed in airplane mode -->
    <string name="wifi_in_airplane_mode">In airplane mode</string>
    <!-- Toast message when WLAN cannot scan for networks -->
    <string name="wifi_fail_to_scan">Unable to scan for networks</string>
    <!-- Checkbox title for option to notify user when open networks are nearby -->
    <string name="wifi_notify_open_networks">Network notification</string>
    <!-- Checkbox summary for option to notify user when open networks are nearby -->
    <string name="wifi_notify_open_networks_summary">Notify me when an open network is available</string>
    <!-- Action message to manually add a wifi network -->
    <string name="wifi_add_network">Add WLAN network</string>
    <!-- Header for the list of wifi networks-->
    <string name="wifi_access_points">WLAN networks</string>
    <!-- Menu option to scan WLAN networks -->
    <string name="wifi_menu_scan">Scan</string>
    <!-- Menu option to WLAN advanced settings -->
    <string name="wifi_menu_advanced">Advanced</string>
    <!-- Menu option to connect to a WLAN network -->
    <string name="wifi_menu_connect">Connect to network</string>
    <!-- Menu option to delete a WLAN network -->
    <string name="wifi_menu_forget">Forget network</string>
    <!-- Menu option to modify a WLAN network configuration -->
    <string name="wifi_menu_modify">Modify network</string>
</resources>
