<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content" android:layout_height="wrap_content"
     android:background="@drawable/health_confirm_bg" android:orientation="vertical"
     android:layout_gravity="center"
     android:layout_marginTop="15dp">
     <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
         android:orientation="horizontal">
        <View android:layout_width="46dp" android:layout_height="42dp"
           android:layout_marginLeft="20dp" android:layout_marginTop="20dp"
           android:background="@drawable/health_prompt"/>
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" 
			android:layout_marginLeft="0dp" android:layout_marginTop="20dp"
			android:textSize="34sp" android:text="@string/health_hint"/>
	</LinearLayout>
	<TextView android:id="@+id/health_confirm" android:layout_width="fill_parent"
	    android:layout_height="wrap_content" android:gravity="center"
		android:layout_marginLeft="0dp" android:layout_marginTop="15dp"
		android:textSize="28sp"/>
	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
	    android:gravity="center" android:layout_marginTop="20dp"
		android:orientation="horizontal">
		<Button android:id="@+id/health_ok" 
		    android:layout_width="wrap_content" android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal" 
		    android:layout_marginLeft="20dp" android:layout_marginTop="10dp"
		    android:textColor="@android:color/white" android:textSize="28sp"
		    android:text="@string/health_confirm" android:background="@drawable/health_setting_btn"/>
		<Button android:id="@+id/health_cancel" 
		    android:layout_width="wrap_content" android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal" 
		    android:layout_marginLeft="20dp" android:layout_marginTop="10dp"
		    android:textColor="@android:color/white" android:textSize="28sp"
		    android:text="@string/health_cancel" android:background="@drawable/health_setting_btn"/>
	</LinearLayout>
</LinearLayout>