<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/alarm_background"
    android:orientation="vertical" >
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:orientation="horizontal">
	    <Button android:id="@+id/home_button" android:layout_width="60dp" android:layout_height="wrap_content"
	        android:background="@drawable/home_button" />
	    <TextView android:layout_width="680dp" android:layout_height="60dp" android:gravity="center_vertical" 
	     	android:paddingLeft="30dp" android:textColor="@android:color/white" android:text="@string/obd_check" 
	     	android:textSize="24sp"/>
	    <Button android:id="@+id/back_button" android:layout_width="60dp" android:layout_height="wrap_content"
			android:background="@drawable/back_button"  />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_marginTop="-20dp" android:orientation="horizontal" android:gravity="center">
        <Button android:id="@+id/check_start_check" android:layout_width="263dp" android:layout_height="96dp"  
	        android:background="@drawable/check_search" android:drawableLeft="@anim/search_anim"
	        android:gravity="center_vertical" android:paddingLeft="0dp"  android:drawablePadding="0dp"
	        android:textSize="35sp" android:textColor="@android:color/white"
			android:text="@string/check_start_check" />
	</LinearLayout>
	<View android:layout_width="fill_parent" android:layout_height="2dp" android:background="@drawable/check_line"></View>
  	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_marginTop="0dp" android:orientation="horizontal" android:gravity="center_vertical">
	    <TextView  android:layout_width="250dp" android:layout_height="wrap_content"  
	     	android:paddingLeft="10dp"   android:textSize="28sp" 
			android:text="@string/check_item"/>
		<View android:layout_width="2dp" android:layout_height="fill_parent" 
			android:background="@drawable/check_line2"></View> 
		<TextView  android:layout_width="fill_parent" android:layout_height="wrap_content"  
	     	android:paddingLeft="0dp"   android:textSize="28sp" android:gravity="center"
			android:text="@string/check_result"/>
	</LinearLayout>
	<View android:layout_width="fill_parent" android:layout_height="2dp" android:background="@drawable/check_line"></View>
	<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:layout_marginTop="0dp" android:orientation="vertical" android:background="#223039">

		<ListView
		    android:id="@+id/listView1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" 
		    android:cacheColorHint="#223039"
		    android:background="#223039"
		    >
		    
		</ListView>
	   	
	</LinearLayout>
	
	
</LinearLayout>